fdo#66086 - MathML export: wideslash, widebslash and overstrike

Change-Id: I1e8da340ffdacab133b0cff6d6344fe56da34bf8